# jigsaw-backend

./: .pre-commit-config.yaml  README.md  README_DOC.md  app.db  app.db.bak  main.py  pyproject.toml  pytest_output.txt  pytest_output3.txt  test_app.db
app/: crud.py  db.py  main.py  models.py  schemas.py
app/db/manager/: history_manager.py  template_manager.py  user_manager.py
app/db/tables/: match_history.py  template.py  user.py
app/models/: history_request.py  history_response.py  match_response.py  template_request.py  template_response.py  user_request.py  user_response.py
app/routers/: __init__.py  history_router.py  match.py  match_router.py  plans.py  present.py  presentations.py  template_router.py  templates.py  user_router.py
app/services/: match_history.py  match_service.py  matching.py  messages.py  preference_rules.py  template_engine.py  user_management.py
docs/: CHANGELOG_PHASE1.md  deletion_candidates.md  import_excel_usage.md  matching_process.md  pre_refactor_tree.md
scripts/: data.csv  data.xlsx  import_excel.py  import_presentations.py  migrate_user_schema.py  remove_deprecated.sh
tests/: test_matching_core.py  test_same_workplace.py  test_templates_presentations.py
tests/fixtures/: matching_data.py
